# compute-starter-kit-rust-default

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  SECURITY.md  catalog-info.yaml  fastly.toml  rust-toolchain  rust-toolchain.toml
.cargo/: config  config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
src/: 404.html  main.rs  welcome-to-compute.html  welcome-to-compute@edge.html
src/static_site/hosfe.lt/: hugo.toml
src/static_site/hosfe.lt/content/: about.md  resume.md
src/static_site/hosfe.lt/content/posts/: edge.md  story.md
src/static_site/hosfe.lt/public/: 404.html  index.html  index.xml  sitemap.xml
src/static_site/hosfe.lt/public/about/: index.html
src/static_site/hosfe.lt/public/posts/: index.html  index.xml
src/static_site/hosfe.lt/public/posts/story/: index.html
src/static_site/hosfe.lt/public/resume/: index.html
src/static_site/hosfe.lt/resources/_gen/assets/scss/scss/: style.scss_871e1d33253f63f556fbcaa4227752be.content  style.scss_871e1d33253f63f556fbcaa4227752be.json
